assets/css/chat.css
#chat-text-box-container {
    margin: 0px 15px 0px 0px;
    overflow:auto;
    border: solid 2px black;
}

p {
    margin: 5px 5px 10px 10px;
}

h1 {
    margin: 15px;
}

#chat-channel-container {
    background-color: purple;
    border-radius: 3px;
    border-left: solid 2px black;
    border-top: solid 2px black;
    border-bottom: solid 2px black;
}

#chat-input-container {
    margin: 5px 15px 5px 0px;
    border-radius: 3px;
}

#container {
    height: 100%;
}

div.layout-column {
    height: 100%;
}

#chat-header {
    background:darkgrey;
    margin: 0px 15px 0px 0px;
    border-left: solid 2px black;
    border-top: solid 2px black;
    border-right: solid 2px black;
}

#chat-main{
    overflow:hidden;
}

#chat-box{
    margin: 5px 0 5px 5px;
}

#username{
    font-weight: bold;
    display: inline-block;
}

#date{
    color: #9e9e9e;
    font-style: italic;
    font-size: small;
    display: inline-block;
}

